--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
     <footer class="bg-dark text-center text-white">
     
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2020 Copyright:
-            <a class="text-white" href="#">DRBC</a>
+              Copyright © 2022 DRBC. Todos direitos reservados
+          
+
         </div>
         <!-- Copyright -->
     </footer>
