--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top opacity-75 shadow-sm p-3 mb-5">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top opacity-75 shadow-sm p-3 ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <div id="cont" class="container">
-                        <img id="logotipo" src="imagens/logotipo.png" alt="DRBC">
+                        <img id="logotipo" src="imagens/logoX.png" alt="DRBC">
 
                     </div>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar" aria-label="botao menu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -123,7 +123,7 @@
     </div>
 
     
-    <footer class="bg-dark text-center text-white">
+   <footer class="bg-dark text-center text-white">
     
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
               Copyright © 2022 DRBC. Todos direitos reservados
