--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top opacity-75 shadow-sm p-3 ">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top opacity-75 shadow-sm p-1 ">
+            <div class="container-fluid" >
                 <a class="navbar-brand" href="#">
-                    <div id="cont" class="container">
-                        <img id="logotipo" src="imagens/logoX.png" alt="DRBC">
+                    <div id="cont" class="container d-sm-inline">
+                        <img id="logotipo" src="imagens/logoX.png" alt="DRBC">DRBC
 
                     </div>
                 </a>
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav ">
                         <li class="nav-item active">
-                            <a class="nav-link active" data-toggle="tab" href="#Sobre">Sobre</a>
+                            <a class="nav-link active " data-toggle="tab" href="#Sobre">Sobre</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#Curriculo">Curriculo</a>
@@ -49,7 +49,7 @@
 
 
     <div id="Sobre" class=" container caixa_texto">
-        <h1 class="lt"> Um pouco de mim.</h1>
+        <h1 class="lt"> Um pouco de min.</h1>
         <p>Olá eu sou o Diego, vou contar um pouco de min nestes versos,
             a area da técnologia vem a cada momento sendo mais atraente aos meus olhos,
             despertando a vontade de min aperfeiçoar, desenvolvendo sites webs, aplicativos para mobile e jogos.
@@ -105,7 +105,7 @@
                     <h2>baixar curriculo</h2>
                     <div id="bc">
 
-                        <a class="btn bg-black" href="curriculo/curriculo.zip" download="curriculo.zip"><i
+                        <a id="botao" class="btn bg-black p-sm-2" href="curriculo/curriculo.zip" download="curriculo.zip"><i
                                 class="fa fa-download"></i>dowload</a>
                     </div>
                 </div>
